# oxidian

./: .gitignore  AGENTS.md  Cargo.toml  SKILL.md  build.rs  flake.nix  schema.toml
.github/workflows/: rust.yml
assets/web-ui/: app.js  index.html
examples/: backlinks.rs  dataview.rs  frontmatter_audit.rs  graph.rs  index.rs  link_audit.rs  links.rs  mentions.rs  search.rs  similarity.rs  sqlite_persist.rs  tags.rs  tasks.rs  watch.rs
src/: config.rs  embeddings.rs  error.rs  fields.rs  graph.rs  index.rs  lib.rs  link_health.rs  link_resolve.rs  links.rs  main.rs  mentions.rs  query.rs  schema.rs  service.rs  similarity.rs  sqlite.rs  vault.rs  web_ui.rs
src/parse/: markdown.rs  mod.rs
tests/: aliases_integration.rs  backlinks_integration.rs  cli_integration.rs  frontmatter_integration.rs  graph_integration.rs  link_health_integration.rs  link_resolve_integration.rs  mentions_integration.rs  query_integration.rs  schema_integration.rs  search_integration.rs  similarity_integration.rs  sqlite_integration.rs  tasks_integration.rs  vault_integration.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: GraphView.tsx  Header.tsx  SettingsPanel.tsx  SigmaCanvas.tsx  StatusPill.tsx
ui/src/hooks/: useGraphSettings.ts  useGraphWs.ts
