[package]
name = "oxidian"
version = "0.1.7"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5.49", features = ["derive", "env"] }
nucleo = "0.5.0"
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.7", optional = true, features = ["ws"] }
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
walkdir = "2.5"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

rusqlite = { version = "0.37", optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
lru = { version = "0.12", optional = true }
sqlite-vec = { version = "0.1.6", optional = true }
tokenizers = { version = "0.15", optional = true }
tract-onnx = { version = "0.21", optional = true }
ureq = { version = "2.10", optional = true }
zerocopy = { version = "0.7", optional = true }

[features]
sqlite = ["dep:rusqlite", "dep:serde_json"]
similarity = [
    "sqlite",
    "dep:sha2",
    "dep:hex",
    "dep:lru",
    "dep:sqlite-vec",
    "dep:tokenizers",
    "dep:tract-onnx",
    "dep:ureq",
    "dep:zerocopy",
]
web-ui = ["dep:axum", "dep:serde_json", "dep:tracing-subscriber"]

[dev-dependencies]
tempfile = "3"
