[package]
name = "oxidian"
version = "0.2.4"
edition = "2024"

[[bin]]
name = "oxi"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.49", features = ["derive", "env"] }
nucleo = "0.5.0"
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
regex = "1"
toml = "0.8"
axum = { version = "0.7", optional = true, features = ["ws"] }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
tower-http = { version = "0.6", optional = true, features = ["fs"] }
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
walkdir = "2.5"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

rusqlite = { version = "0.39", optional = true }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
lru = { version = "0.12", optional = true }
sqlite-vec = { version = "0.1.6", optional = true }
tokenizers = { version = "0.15", optional = true }
tract-onnx = { version = "0.22", optional = true }
ureq = { version = "2.10", optional = true }
zerocopy = { version = "0.7", optional = true }

[features]
sqlite = ["dep:rusqlite"]
similarity = [
    "sqlite",
    "dep:sha2",
    "dep:hex",
    "dep:lru",
    "dep:sqlite-vec",
    "dep:tokenizers",
    "dep:tract-onnx",
    "dep:ureq",
    "dep:zerocopy",
]
web-ui = ["dep:axum", "dep:tracing-subscriber", "dep:rust-embed", "dep:mime_guess", "dep:tower-http"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
